...
    </Pressable>
  );

  if (isLoading) return LoadingComponent;

  return (
    <Screen testID="home-screen">
      <VStack
        onLayout={() => {
          if (!isHomeLaidOut) setIsHomeLaidOut(true);
        }}
        style={{
          flex: 1,
...
